--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "the-a-team",
   "version": "0.0.1",
   "dependencies": {
-    "express": "3.1.x"
+    "express": "3.1.x",
+    "eco": "1.1",
+    "socket.io": "0.9.16",
+    "pusher": "0.1.3"
   },
   "engines": {
     "node": "0.10.x",
